--- a/equipos.html
+++ b/equipos.html
@@ -27,7 +27,29 @@
                     <img src="/img/pcs/1.jpg" alt="1" style="width:50%">
                     <div class="container">
                       <h4><b>PC Gamer Draco Green Core I5 10TH</b></h4>
-                      <p>Architect & Engineer</p>
+                      <p>S/ 2,999</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup">Ver configuración</a></p>
+                      <div id="popup" class="overlay">
+                        <div id="popupBody">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popupContent">
+                            <ul>
+                              <li>CPU Intel Core i5 10400F</li>
+                              <li>2.90 GHz, 12 MB Caché L3</li>
+                              <li>Disco Sólido SSD 500GB</li>
+                              <li>Memoria RAM 16GB DDR4 2666 MHz</li>
+                              <li>Monitor LED 22" FHD Widescreen</li>
+                              <li>Mainboard H510 DVI/ HDMI</li>
+                              <li>Tarjeta de Video  GT1030</li>
+                              <li>Fuente Real 550 W.</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
+
                     </div>
                   </div>
             </div>
@@ -36,7 +58,31 @@
                     <img src="/img/pcs/2.jpg" alt="2" style="width:50%">
                     <div class="container">
                       <h4><b>PC Gamer Ryu Blue Plus Core I7 4th Gen</b></h4>
-                      <p>Architect & Engineer</p>
+                      <p>S/ 3,299</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup1">Ver configuración</a></p>
+                      <div id="popup1" class="overlay">
+                        <div id="popup1Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup1Content">
+                            <ul>
+                              <li>CPU Intel Core i5 11400</li>
+                              <li>2.6Ghz / 4.4Ghz 6 nucleos cache 12mb</li>
+                              <li>Disco Duro HDD 2TB </li>
+                              <li>Disco Sólido SSD 256GB</li>
+                              <li>Memoria RAM 16GB DDR4 / 3200mhz</li>
+                              <li>Monitor LCD 22" FHD</li>
+                              <li>Mainboard B560</li>
+                              <li>DVI/ VGA / HDMI </li>
+                              <li>Teclado/ mouse</li>
+                              <li>Fuente Real 550 W</li>
+                              <li>Cooler Gamemax</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
                     </div>
                   </div>
             </div>
@@ -45,7 +91,28 @@
                     <img src="/img/pcs/3.jpg" alt="3" style="width:50%">
                     <div class="container">
                       <h4><b>Computadora Core I5 11400 11th</b></h4>
-                      <p>Architect & Engineer</p>
+                      <p>S/ 3,099</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup2">Ver configuración</a></p>
+                      <div id="popup2" class="overlay">
+                        <div id="popup2Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup2Content">
+                            <ul>
+                              <li>CPU Intel Core i5 10400F</li>
+                              <li>2.90 GHz, 12 MB Caché L3</li>
+                              <li>Disco Sólido SSD 500GB</li>
+                              <li>Memoria RAM 16GB DDR4 2666 MHz</li>
+                              <li>Monitor LED 22" FHD Widescreen</li>
+                              <li>Mainboard H510 DVI/ HDMI</li>
+                              <li>Tarjeta de Video  GT1030</li>
+                              <li>Fuente Real 550 W.</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
                     </div>
                   </div>
             </div>
@@ -53,9 +120,31 @@
                 <div class="card">
                     <img src="/img/pcs/4.jpg" alt="4" style="width:50%">
                     <div class="container">
-                      <h4><b>Computadora CORE I7 3th Gen
-                    </b></h4>
-                      <p>Architect & Engineer</p>
+                      <h4><b>Computadora CORE I7 3th Gen</b></h4>
+                      <p>S/ 2,099</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup3">Ver configuración</a></p>
+                      <div id="popup3" class="overlay">
+                        <div id="popup3Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup3Content">
+                            <ul>
+                              <li>Core i7 3Th 3.4 GHz</li>
+                              <li>4 Núcleos cache 8MB</li>
+                              <li>Disco duro HDD 2TB</li>
+                              <li>Disco Sólido SSD 256GB</li>
+                              <li>Memoria RAM 16GB DDR3 / 1600 MHz</li>
+                              <li>Monitor  22" FHD</li>
+                              <li>Mainboard B75</li>
+                              <li>RJ45/ VGA/ Display Port/WIFI</li>
+                              <li>Teclado/ mouse</li>
+                              <li>Fuente real 350 W</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
                     </div>
                   </div>
             </div>
@@ -64,7 +153,31 @@
                     <img src="/img/pcs/5.jpg" alt="5" style="width:50%">
                     <div class="container">
                       <h4><b>Computadora Core I5 10400F</b></h4>
-                      <p>Architect & Engineer</p>
+                      <p>S/ 3.999</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup4">Ver configuración</a></p>
+                      <div id="popup4" class="overlay">
+                        <div id="popup4Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup4Content">
+                            <ul>
+                              <li>CPU Intel Core i5 10400F</li>
+                              <li>2.90 GHz 12MB Caché L3</li>
+                              <li>Disco Duro 1TB</li>
+                              <li>Disco Sólido 500GB </li>
+                              <li>Memoria RAM 16GB DDR4/ 2666 MHz</li>
+                              <li>Monitor 27" FHD Samsung Plano</li>
+                              <li>Mainboard B460</li>
+                              <li>Tarjeta de Video GTX1650 4GB</li>
+                              <li>DVI/ HDMI/ Display Port / Wifi</li>
+                              <li>kit: teclado y mouse logitech mk120</li>
+                              <li>Fuente Real 650W</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
                     </div>
                   </div>
             </div>
@@ -73,7 +186,31 @@
                     <img src="/img/pcs/6.jpg" alt="6" style="width:50%">
                     <div class="container">
                       <h4><b>Computadora CORE I7 10700F</b></h4>
-                      <p>Architect & Engineer</p>
+                      <p>S/ 5,299</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup5">Ver configuración</a></p>
+                      <div id="popup5" class="overlay">
+                        <div id="popup5Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup5Content">
+                            <ul>
+                              <li>CPU Intel Core I7 10700F</li>
+                              <li>2.90 GHz 16MB Caché L3</li>
+                              <li>Disco Duro 1TB</li>
+                              <li>Disco Sólido M2 500GB NVME</li>
+                              <li>Memoria RAM 32GB DDR4/ 2666MHz</li>
+                              <li>Mainboard B460 </li>
+                              <li>Monitor LED 27" FHD </li>
+                              <li>Tarjeta de Video GTX1660 Super 6GB</li>
+                              <li>DVI/ HDMI/ Display Port/Wifi</li>
+                              <li>kit: teclado y mouse logitech mk120</li>
+                              <li>Fuente 700W Antryx XPII 80 Plus White</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
                     </div>
                   </div>
             </div>
