--- a/contacto.html
+++ b/contacto.html
@@ -10,32 +10,41 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
     <title>Inicio</title>
+    <link rel="icon" type="image/x-icon" href="/img/geekcave.png">
 </head>
 <body>
     <header>
         <ul class="menu-ul">
-            <li class="menu-li"><a class="active" href="/index.html">Home</a></li>
+            <li class="menu-li"><a class="active" href="/index.html">HOME</a></li>
             <li class="menu-li"><a href="/equipos.html">EQUIPOS</a></li>
             <li class="menu-li"><a href="/contacto.html">CONTACTO</a></li>
             <li class="menu-li"><a href="/juegos.html">JUEGOS</a></li>
         </ul>
+        <h1>Contacto</h1>
         <ul class="social-icons">
+            <h2>¡Síguenos en todas nuestras redes sociales, estaremos informando constantemente sobre actualizaciones; ofertas; nuevos productos; y más!</h2>
             <li>
-                <a href=""><i class="fab fa-facebook-square">
+                <a href="http://127.0.0.1:5500/contacto.html" target="_blank"><i class="fab fa-facebook-square">
                     <p>Facebook</p>
                 </i></a>
             </li>
             <li>
-                <a href=""><i class="fab fa-twitter">
+                <a href="http://127.0.0.1:5500/contacto.html" target="_blank"><i class="fab fa-twitter">
                     <p>Twitter</p>
                 </i></a>
             </li>
             <li>
-                <a href=""><i class="fab fa-whatsapp">
-                    
+                <a href="http://127.0.0.1:5500/contacto.html" target="_blank"><i class="fab fa-whatsapp">
+                    <p>Whatsapp (Sólo pedidos y para más información)</p>
                 </i></a>
             </li>
+            <li>
+                <a href="http://127.0.0.1:5500/contacto.html" target="_blank"><i class="fab fa-instagram">
+                    <p>Instagram</p>
+                </i></a>
         </ul>
-    </header>   
+        <img src="/img/redes.jpg" alt="">
+    </header>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00cba9" fill-opacity="1" d="M0,224L16,234.7C32,245,64,267,96,229.3C128,192,160,96,192,74.7C224,53,256,107,288,128C320,149,352,139,384,117.3C416,96,448,64,480,48C512,32,544,32,576,74.7C608,117,640,203,672,202.7C704,203,736,117,768,85.3C800,53,832,75,864,112C896,149,928,203,960,192C992,181,1024,107,1056,80C1088,53,1120,75,1152,80C1184,85,1216,75,1248,69.3C1280,64,1312,64,1344,69.3C1376,75,1408,85,1424,90.7L1440,96L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>   
 </body>
 </html>
