--- a/equipos.html
+++ b/equipos.html
@@ -9,11 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
     <title>Inicio</title>
+    <link rel="icon" type="image/x-icon" href="/img/geekcave.png">
 </head>
 <body>
     <header>
         <ul class="menu-ul">
-            <li class="menu-li"><a class="active" href="/index.html">Home</a></li>
+            <li class="menu-li"><a class="active" href="/index.html">HOME</a></li>
             <li class="menu-li"><a href="/equipos.html">EQUIPOS</a></li>
             <li class="menu-li"><a href="/contacto.html">CONTACTO</a></li>
             <li class="menu-li"><a href="/juegos.html">JUEGOS</a></li>
@@ -24,7 +25,20 @@
         <div class="wrapper">
             <div>
                 <div class="card">
-                    <img src="/img/pcs/1.jpg" alt="1" style="width:50%">
+                    <img src="/img/pcs/1.jpg" alt="1" class="img1" style="width:50%";>
+
+                    <img src="/img/pcs/corei5.jpg" alt="" class="img2">
+                    <style>
+                      .img1 {
+                        border: 5px solid rgba(214, 79, 255, 0.644);
+                      }
+
+                      .img2 {
+                        display: flex;
+                        width: 70px;
+                        height: 70px;
+                      }
+                    </style>
                     <div class="container">
                       <h4><b>PC Gamer Draco Green Core I5 10TH</b></h4>
                       <p>S/ 2,999</p>
@@ -55,7 +69,9 @@
             </div>
             <div>
                 <div class="card">
-                    <img src="/img/pcs/2.jpg" alt="2" style="width:50%">
+                    <img src="/img/pcs/2.jpg" alt="2" class="img1" style="width:50%">
+
+                    <img src="/img/pcs/corei7.jpg" alt="" class="img2">
                     <div class="container">
                       <h4><b>PC Gamer Ryu Blue Plus Core I7 4th Gen</b></h4>
                       <p>S/ 3,299</p>
@@ -66,6 +82,41 @@
                           <h2>Configuración del equipo</h2>
                           <a id="cerrar" href="#">&times;</a>
                           <div class="popup1Content">
+                            <ul>
+                              <li>CPU Intel Core i7 4th 3.4 GHz</li>
+                              <li>4 núcleos Cache 8MB</li>
+                              <li>Disco Sólido SSD 500GB</li>
+                              <li>Memoria RAM 16GB DDR3 / 1600 MHz</li>
+                              <li>Monitor LED 24" FHD Curvo</li>
+                              <li>MAINBOARD INTEL B85</li>
+                              <li>Video Nvidia GTX1650 4GB</li>
+                              <li>RJ45/ VGA/ HDMI</li>
+                              <li>Teclado/ mouse</li>
+                              <li>Kit Gamer: Teclado/ Mouse</li>
+                              <li>Fuente Real 650 W</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- aqui termina el area del popup-->
+                    </div>
+                  </div>
+            </div>
+            <div>
+                <div class="card">
+                    <img src="/img/pcs/3.jpg" alt="3" class="img1" style="width:50%">
+
+                    <img src="/img/pcs/corei511.jpg" alt="" class="img2">
+                    <div class="container">
+                      <h4><b>Computadora Core I5 11400 11th</b></h4>
+                      <p>S/ 3,099</p>
+                      <!-- area de popup-->
+                      <p><a href="#popup2">Ver configuración</a></p>
+                      <div id="popup2" class="overlay">
+                        <div id="popup2Body">
+                          <h2>Configuración del equipo</h2>
+                          <a id="cerrar" href="#">&times;</a>
+                          <div class="popup2Content">
                             <ul>
                               <li>CPU Intel Core i5 11400</li>
                               <li>2.6Ghz / 4.4Ghz 6 nucleos cache 12mb</li>
@@ -88,37 +139,9 @@
             </div>
             <div>
                 <div class="card">
-                    <img src="/img/pcs/3.jpg" alt="3" style="width:50%">
-                    <div class="container">
-                      <h4><b>Computadora Core I5 11400 11th</b></h4>
-                      <p>S/ 3,099</p>
-                      <!-- area de popup-->
-                      <p><a href="#popup2">Ver configuración</a></p>
-                      <div id="popup2" class="overlay">
-                        <div id="popup2Body">
-                          <h2>Configuración del equipo</h2>
-                          <a id="cerrar" href="#">&times;</a>
-                          <div class="popup2Content">
-                            <ul>
-                              <li>CPU Intel Core i5 10400F</li>
-                              <li>2.90 GHz, 12 MB Caché L3</li>
-                              <li>Disco Sólido SSD 500GB</li>
-                              <li>Memoria RAM 16GB DDR4 2666 MHz</li>
-                              <li>Monitor LED 22" FHD Widescreen</li>
-                              <li>Mainboard H510 DVI/ HDMI</li>
-                              <li>Tarjeta de Video  GT1030</li>
-                              <li>Fuente Real 550 W.</li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- aqui termina el area del popup-->
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/pcs/4.jpg" alt="4" style="width:50%">
+                    <img src="/img/pcs/4.jpg" alt="4" class="img1" style="width:50%">
+
+                    <img src="/img/pcs/corei73.webp" alt="" class="img2">
                     <div class="container">
                       <h4><b>Computadora CORE I7 3th Gen</b></h4>
                       <p>S/ 2,099</p>
@@ -150,7 +173,9 @@
             </div>
             <div>
                 <div class="card">
-                    <img src="/img/pcs/5.jpg" alt="5" style="width:50%">
+                    <img src="/img/pcs/5.jpg" alt="5" class="img1" style="width:50%">
+
+                    <img src="/img/pcs/corei510400.jpg" alt="" class="img2">
                     <div class="container">
                       <h4><b>Computadora Core I5 10400F</b></h4>
                       <p>S/ 3.999</p>
@@ -183,7 +208,9 @@
             </div>
             <div>
                 <div class="card">
-                    <img src="/img/pcs/6.jpg" alt="6" style="width:50%">
+                    <img src="/img/pcs/6.jpg" alt="6" class="img1" style="width:50%">
+
+                    <img src="/img/pcs/corei710.jpg" alt="" class="img2">
                     <div class="container">
                       <h4><b>Computadora CORE I7 10700F</b></h4>
                       <p>S/ 5,299</p>
@@ -215,6 +242,7 @@
                   </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00cba9" fill-opacity="1" d="M0,224L16,234.7C32,245,64,267,96,229.3C128,192,160,96,192,74.7C224,53,256,107,288,128C320,149,352,139,384,117.3C416,96,448,64,480,48C512,32,544,32,576,74.7C608,117,640,203,672,202.7C704,203,736,117,768,85.3C800,53,832,75,864,112C896,149,928,203,960,192C992,181,1024,107,1056,80C1088,53,1120,75,1152,80C1184,85,1216,75,1248,69.3C1280,64,1312,64,1344,69.3C1376,75,1408,85,1424,90.7L1440,96L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>
     </main>    
 </body>
 </html>
