--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="estilos.css">
     <title>Inicio</title>
+    <link rel="icon" type="image/x-icon" href="/img/geekcave.png">
 </head>
 <body>
     <header>
         <ul class="menu-ul">
-            <li class="menu-li"><a class="active" href="/index.html">Home</a></li>
+            <li class="menu-li"><a class="active" href="/index.html">HOME</a></li>
             <li class="menu-li"><a href="/equipos.html">EQUIPOS</a></li>
             <li class="menu-li"><a href="/contacto.html">CONTACTO</a></li>
             <li class="menu-li"><a href="/juegos.html">JUEGOS</a></li>
@@ -26,6 +27,6 @@
             <img src="/img/oup.png" alt="Imagen de computadora">
             <div class="centrado"> <p class="p-img"> Los mejores equipos de computadoras </p> </div>
         </div>
-    </main>    
+    </main>  
 </body>
 </html>
