--- a/juegos.html
+++ b/juegos.html
@@ -1,82 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Inicio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="estilos.css">
+  <title>Inicio</title>
+  <link rel="icon" type="image/x-icon" href="/img/geekcave.png">
+
 </head>
+
 <body>
-    <header>
-        <ul class="menu-ul">
-            <li class="menu-li"><a class="active" href="/index.html">Home</a></li>
-            <li class="menu-li"><a href="/equipos.html">EQUIPOS</a></li>
-            <li class="menu-li"><a href="/contacto.html">CONTACTO</a></li>
-            <li class="menu-li"><a href="/juegos.html">JUEGOS</a></li>
-        </ul>
-    </header>
-    <main>
-        <h1>Equipos</h1>
-        <div class="wrapper">
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x1.jpg" alt="1" style="width:50%">
-                    <div class="container">
-                      <h4><b>Fallout 4</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x2.jpg" alt="2" style="width:50%">
-                    <div class="container">
-                      <h4><b>Battlefield 2042</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x3.jpg" alt="3" style="width:50%">
-                    <div class="container">
-                      <h4><b>God of War: Ragnarök</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x4.jpg" alt="4" style="width:50%">
-                    <div class="container">
-                      <h4><b>Fortnite</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x5.jpg" alt="5" style="width:50%">
-                    <div class="container">
-                      <h4><b>Mario Party Superstars</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
-            <div>
-                <div class="card">
-                    <img src="/img/juegos/x6.jpg" alt="6" style="width:50%">
-                    <div class="container">
-                      <h4><b>Super Mario 3D World + Bowser's fury</b></h4>
-                      <p>Architect & Engineer</p>
-                    </div>
-                  </div>
-            </div>
+  <header>
+    <ul class="menu-ul">
+      <li class="menu-li"><a class="active" href="/index.html">HOME</a></li>
+      <li class="menu-li"><a href="/equipos.html">EQUIPOS</a></li>
+      <li class="menu-li"><a href="/contacto.html">CONTACTO</a></li>
+      <li class="menu-li"><a href="/juegos.html">JUEGOS</a></li>
+    </ul>
+  </header>
+  <main>
+    <h1>Videojuegos</h1>
+    <div class="wrapper-juegos">
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi.webp" alt="1" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>Medievil</b></h4>
+            <p>MediEvil es un videojuego de aventura y acción perteneciente al género de Cortar y destripar.
+              Desarrollado
+              por el estudio canadiense Other Ocean Interactive y publicado por Sony Interactive Entertainment para
+              PlayStation 4. Es un remake del videojuego de 1998 del sistema PlayStation, MediEvil.</p>
+          </div>
         </div>
-    </main>
+      </div>
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi2.webp" alt="2" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>Elden Ring</b></h4>
+            <p>Elden Ring es un videojuego de rol de acción desarrollado por FromSoftware y publicado por Bandai Namco
+              Entertainment. El videojuego surge de una colaboración entre el director y diseñador Hidetaka Miyazaki y
+              el novelista de fantasía George R. R. Martin.</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi3.jpeg" alt="3" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>God of War: Ragnarök</b></h4>
+            <p>God of War: Ragnarök es un videojuego de acción y aventuras desarrollado por Santa Monica Studio y
+              publicado por Sony Interactive Entertainment. Se lanzó en todo el mundo el 9 de noviembre de 2022 para
+              PlayStation 4 y PlayStation 5, lo que marca el primer lanzamiento entre generaciones de la serie.</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi4.webp" alt="4" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>Sonic Frontiers</b></h4>
+            <p>Es un videojuego de plataformas desarrollado por Sonic Team y publicado por Sega. Es el primer videojuego
+              de Sonic the Hedgehog que presenta un mundo abierto.</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi5.jpg" alt="5" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>The Legend of Zelda Breath of the Wild</b></h4>
+            <p>The Legend of Zelda: Breath of the Wild es un videojuego de acción-aventura de 2017 de la serie The
+              Legend of Zelda, desarrollado por la filial Nintendo EPD en colaboración con Monolith Soft y publicado por
+              Nintendo para las consolas Wii U y Nintendo Switch.</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="tooltip">
+          <img src="/img/juegos/medi6.jpg" alt="6" style="width:100%">
+          <div class="tooltiptext">
+            <h4><b>Super Mario 3D World + Bowser's fury</b></h4>
+            <p>Bowser's Fury es un juego de plataformas de 2021 incluido con el lanzamiento de Super Mario 3D World para
+              Nintendo Switch, titulado Super Mario 3D World + Bowser's Fury.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#00cba9" fill-opacity="1"
+        d="M0,224L16,234.7C32,245,64,267,96,229.3C128,192,160,96,192,74.7C224,53,256,107,288,128C320,149,352,139,384,117.3C416,96,448,64,480,48C512,32,544,32,576,74.7C608,117,640,203,672,202.7C704,203,736,117,768,85.3C800,53,832,75,864,112C896,149,928,203,960,192C992,181,1024,107,1056,80C1088,53,1120,75,1152,80C1184,85,1216,75,1248,69.3C1280,64,1312,64,1344,69.3C1376,75,1408,85,1424,90.7L1440,96L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z">
+      </path>
+    </svg>
+  </main>
 </body>
+
 </html>
